maze.lessons.maze.island.IslandMaze.scala.error
Escaper:13: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime27.Escaper
    if (getDirection==direction.sud) {
                      ^